Retrofits user authorization into update.
